--- a/views/main.ejs
+++ b/views/main.ejs
@@ -67,8 +67,8 @@
       <a class="item" id="about" href="#about">About</a>
       <a class="item" id="agenda" href="#agenda">Agenda</a>
       <a class="item" id="speakers" href="#speakers">Speakers</a>
-      <a class="item" id="partners" href="#partners">Partners</a>
       <a class="item" id="pricing" href="#pricing">Pricing</a>
+      <a class="item" id="partners" href="#partners">Partners</a>
       <a class="item" id="arena" href="#arena">Arena</a>
       <a class="item" id="venue" href="#venue">Details</a>
       <a class="item" id="contact">Contact</a>
@@ -86,8 +86,8 @@
         <div class="item" id="about">About</div>
         <div class="item" id="agenda">Agenda</div>
         <div class="item" id="speakers">Speakers</div>
-        <div class="item" id="partners">Partners</div>
         <div class="item" id="pricing">Pricing</div>
+        <div class="item" id="partners">Partners</div>
         <div class="items" id="arena">Arena</div>
         <div class="item" id="venue">Venue</div>
         <div class="item" id="contact">Contact</div>
@@ -107,9 +107,9 @@
       <h1 class="ui header" id="eventVenue">NUS, Singapore</h1>
     </div>
     <div class="ui text detail container">
-      <h3>UNICON 2018 was a two–day conference that serves to unite international student entrepreneurs, prominent founders,
+      <h3>UNICON 2019 is a two–day conference that serves to unite international student entrepreneurs, prominent founders,
         industry experts and venture capitalists. Each year, outstanding young entrepreneurs from across Asia are gathered, challenged and inspired through our activities line-up.
-        Stay tuned for details on UNICON 2019!
+        Hurry and buy tickets for UNICON 2019!
       </h3>
     </div>
   </div>
@@ -213,6 +213,10 @@
       </div>
       <div class="ui middle aligned equal width grid detail container">
         <div class="eight wide mobile four wide tablet four wide computer column">
+          <h3 class="info"><div class="name">Chee Hong Tat</div><br>Senior Minister of State<br>MTI & MOE</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Chee_Hong_Tat.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
           <a href="https://www.linkedin.com/in/ajeygore/"><i class="linkedin icon"></i></a>
           <h3 class="info"><div class="name" id="no_warp">Ajey Gore</div><br>Group CTO<br>Go-Jek</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/Ajey_Gore.png">
@@ -295,6 +299,51 @@
       <!--Present Speakers-->
     </div>
 
+      <div class="ui vertical pricing-section center aligned segment" id="pricing">
+
+        <div class="ui text header container">
+          <h1 class="ui header">Pricing</h1>
+        </div>
+
+        <div class="ui center aligned equal width content grid container">
+          <div class="sixteen wide mobile five wide tablet five wide computer column">
+            <div class="ui raised card">
+              <h2>Students</h2>
+              <h4>Currently enrolled in any University</h4>
+              <h1>S$50</h1>
+              <a class="eb"><h3>Early bird</h3></a>
+              <a class="ui animated vertical button"  href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" tabindex="0">
+                <div class="visible content"><h2>Register Now</h2></div>
+                <div class="hidden content"><i class="shopping cart icon"></i></div>
+              </a>
+            </div>
+          </div>
+          <div class="sixteen wide mobile five wide tablet five wide computer column">
+            <div class="ui raised card">
+              <h2>Recent Graduates</h2>
+              <h4>Class of 2016 Onwards</h4>
+              <h1>S$100</h1>
+              <a class="eb"><h3>Early bird</h3></a>
+              <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
+                <div class="visible content"><h2>Register Now</h2></div>
+                <div class="hidden content"><i class="shopping cart icon"></i></div>
+              </a>
+            </div>
+          </div>
+          <div class="sixteen wide mobile five wide tablet five wide computer column">
+            <div class="ui raised card">
+              <h2>Public</h2>
+              <h4>Open to all working adults</h4>
+              <h1>S$140</h1>
+              <a class="eb"><h3>Early bird</h3></a>
+              <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
+                <div class="visible content"><h2>Register Now</h2></div>
+                <div class="hidden content"><i class="shopping cart icon"></i></div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
 
   <div class="ui vertical partners-section center aligned segment" id="partners">
     <div class="ui text header container">
@@ -310,13 +359,10 @@
         <img class="ui image" src="/speakers_images/enterprise.png">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/nyc.png">
+        <img class="ui image" src="/speakers_images/imda.jpg">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/gefa.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/fave.png">
+        <img class="ui image" src="/speakers_images/tesa.jpg">
       </div>
     </div>
 
@@ -434,54 +480,6 @@
     </div>
   </div>
 
-
-
-  <div class="ui vertical pricing-section center aligned segment" id="pricing">
-
-    <div class="ui text header container">
-      <h1 class="ui header">Pricing</h1>
-    </div>
-
-    <div class="ui center aligned equal width content grid container">
-      <div class="sixteen wide mobile five wide tablet five wide computer column">
-        <div class="ui raised card">
-          <h2>Students</h2>
-          <h4>Currently enrolled in any University</h4>
-          <h1>S$50</h1>
-          <a class="eb"><h3>Early bird</h3></a>
-          <a class="ui animated vertical button"  href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" tabindex="0">
-            <div class="visible content"><h2>Register Now</h2></div>
-            <div class="hidden content"><i class="shopping cart icon"></i></div>
-          </a>
-        </div>
-      </div>
-      <div class="sixteen wide mobile five wide tablet five wide computer column">
-        <div class="ui raised card">
-          <h2>Recent Graduates</h2>
-          <h4>Class of 2016 Onwards</h4>
-          <h1>S$100</h1>
-          <a class="eb"><h3>Early bird</h3></a>
-          <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
-            <div class="visible content"><h2>Register Now</h2></div>
-            <div class="hidden content"><i class="shopping cart icon"></i></div>
-          </a>
-        </div>
-      </div>
-      <div class="sixteen wide mobile five wide tablet five wide computer column">
-        <div class="ui raised card">
-          <h2>Public</h2>
-          <h4>Open to all working adults</h4>
-          <h1>S$140</h1>
-          <a class="eb"><h3>Early bird</h3></a>
-          <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
-            <div class="visible content"><h2>Register Now</h2></div>
-            <div class="hidden content"><i class="shopping cart icon"></i></div>
-          </a>
-        </div>
-      </div>
-    </div>
-
-  </div>
   <a name="arena"></a>
   <div class="ui vertical arena-section segment" id="arena">
     <div class="ui text header container">
@@ -494,7 +492,7 @@
             <div class="centered image">
               <img class="ui rounded image" src="/speakers_images/arena.jpg">
               <h1 class="ui header">BRINGING YOUR START-UP IDEAS TO LIFE</h1>
-              <a class="ui animated button" id="eligibility_criteria" href="https://drive.google.com/file/d/1qDzGvaDaEOtWCVBUN2Iqv3oTQHIyjd8V/view?usp=sharing">
+              <a class="ui animated button" id="eligibility_criteria" href="https://drive.google.com/file/d/1WWcIXl8niJNI8B-Lm5dRTXTAYDRmXJO_/view?usp=sharing">
                 <div class="visible content">Details</div>
                 <div class="hidden content"><i class="list icon"></i></div>
               </a>
@@ -535,12 +533,6 @@
                 <div class="inline field">
                   <div class="ui checkbox">
                     <input type="checkbox" tabindex="0" class="hidden" required="required">
-                    <label><h2>You have registered for UNICON 2019</h2></label>
-                  </div>
-                </div>
-                <div class="inline field">
-                  <div class="ui checkbox">
-                    <input type="checkbox" tabindex="0" class="hidden" required="required">
                     <label><h2>The start-up has less than S$50,000 of external funding.</h2></label>
                   </div>
                 </div>
@@ -553,7 +545,7 @@
                 <div class="inline field">
                   <div class="ui checkbox">
                     <input type="checkbox" tabindex="0" class="hidden" required="required">
-                    <label><h2>Available to pitch on 11 February 2019.</h2></label>
+                    <label><h2>Available to pitch on 12 February 2019.</h2></label>
                   </div>
                 </div>
                 <button class="ui animated button" id="submit_arena_form" type="submit">
@@ -562,7 +554,7 @@
                 </button>
                 <br>
                 <br>
-                <label><h2>IMPORTANT NOTE:<br> Send your deck file to <a href="mailto:unicon@nes.org.sg?Subject=Arena Deck for" target="_top">unicon@nes.org.sg </a> and <a href="mailto:robin.lim@u.nus.edu?Subject=Arena Deck for" target="_top">robin.lim@u.nus.edu </a>within 1 day after your application form is submitted. (Please ensure that your name and your Start-up name are included in your deck file name.)</h2></label>
+                <label><h2>IMPORTANT NOTE:<br> Send your deck file to <a href="mailto:unicon@nes.org.sg?Subject=Arena Deck for" target="_top">unicon@nes.org.sg </a> and <a href="mailto:robin.lim@u.nus.edu?Subject=Arena Deck for" target="_top">robin.lim@u.nus.edu </a>after your application form is submitted. (Please ensure that your name and your Start-up name are included in your deck file name.)</h2></label>
               </form>
             </div>
           </div>
