--- a/views/main.ejs
+++ b/views/main.ejs
@@ -296,6 +296,11 @@
           <h3 class="info"><div class="name" id="no_warp">Doug Parker</div><br>COO<br>nuTonomy</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/doug_parker.png">
         </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/sarveenchester/"><i class="linkedin icon"></i></a>
+          <h3 class="info"><div class="name" id="no_warp">Sarveen Chester</div><br>Growth Launcher<br>Revolut</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/sarveen_ chester.png">
+        </div>
       <!--Present Speakers-->
     </div>
 
