added new sponsors

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -352,7 +352,7 @@
 
   <div class="ui vertical partners-section center aligned segment" id="partners">
     <div class="ui text header container">
-      <h1 class="ui header">Key Partners for 2019</h1>
+      <h1 class="ui header">Key Sponsors for 2019</h1>
     </div>
     <div class="ui text description container">
       <h3>Industry-defining brands that have helped make UNICON into what it is today.
@@ -361,13 +361,16 @@
 
     <div class="ui center aligned equal width grid primary detail container">
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/enterprise.png">
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/imda.jpg">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/tesa.jpg">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/ua.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/xmd.jpg">
       </div>
     </div>
 
