added new logos and link

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -450,40 +450,31 @@
         <a href="http://enterprise.nus.edu.sg"><img class="ui image" src="/speakers_images/enterprise.png"></a>
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sg.alphacamp.co"><img class="ui image" src="/speakers_images/ac.png"></a>
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="http://thehive.sg"><img class="ui image" src="/speakers_images/hive.png"></a>
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://www.questventures.com"><img class="ui image" src="/speakers_images/quest.png"></a>
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="http://www.startupjobs.asia"><img class="ui image" src="/speakers_images/sja.png"></a>
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://dailysocial.id"><img class="ui image" src="/speakers_images/dsi.png"></a>
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="http://kolaborasi.co"><img class="ui image" src="/speakers_images/kola.png"></a>
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="http://www.unframed.so"><img class="ui image" src="/speakers_images/unframed.png"></a>
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="http://www.cnclv.co"><img class="ui image" src="/speakers_images/conclave.png"></a>
-      </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://www.collision8.com"><img class="ui image" src="/speakers_images/collison.png"></a>
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://geekhunter.co"><img class="ui image" src="/speakers_images/geek.png"></a>
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://sponslist.com"><img class="ui image" src="/speakers_images/sponslist.png"></a>
+        <a href="https://launchcampus.co"><img class="ui image" src="/speakers_images/launch_campus.png"></a>
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="https://launchcampus.co"><img class="ui image" src="/speakers_images/launch_campus.png"></a>
+        <a href="https://ace.org.sg/"><img class="ui image" src="/speakers_images/ace.png"></a>
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <a href="https://l3.work/"><img class="ui image" src="/speakers_images/lvl3.png"></a>
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <a href="https://www.themox.co/"><img class="ui image" src="/speakers_images/mox.png"></a>
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <a href="https://www.raise.sg/"><img class="ui image" src="/speakers_images/raise.png"></a>
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <a href="http://thecompany.jp/en/"><img class="ui image" src="/speakers_images/thecompany.png"></a>
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <a href="https://www.reactor.school/"><img class="ui image" src="/speakers_images/reactor.png"></a>
       </div>
     </div>
   </div>
@@ -540,12 +531,13 @@
 
   <div class="ui vertical contact-section segment">
     <div class="ui text center aligned header container">
-      <h1 class="ui header">What's next?</h1>
+      <h1 class="ui header">Want to volunteer?</h1>
     </div>
 
     <div class="ui text center aligned update container">
-      <h3>We announce updates via email first. Leave your address to be the first to know.</h3>
+      <h3>Fill up the application </h3>
       <form id="gform" method="POST" action="https://script.google.com/a/nes.org.sg/macros/s/AKfycbxLtkCBQcdIGnu4W9KmoTJCncyCwQhi3tENyxRfPmiV00pjl1Bg/exec">
+
         <div class="ui action input">
           <input type="email" required="required" name="email" placeholder="Email">
           <button class="ui animated button" type="submit">
