added new logos and link

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -471,7 +471,7 @@
         <a href="https://www.raise.sg/"><img class="ui image" src="/speakers_images/raise.png"></a>
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <a href="http://thecompany.jp/en/"><img class="ui image" src="/speakers_images/thecompany.png"></a>
+        <a href="http://thecompany.jp/en/"><img class="ui image" src="/speakers_images/thecompany.PNG"></a>
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://www.reactor.school/"><img class="ui image" src="/speakers_images/reactor.png"></a>
