added new logos and link

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -367,7 +367,8 @@
         <img class="ui image" src="/speakers_images/tesa.jpg">
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/ua.png">
+        <a href="https://www.upcodeacademy.com/"><img class="ui image" src="/speakers_images/ua.png"></a>
+
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
         <img class="ui image" src="/speakers_images/xmd.jpg">
