--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -724,6 +724,7 @@ body {
 .contact-section.segment .update.container  {
   position: relative;
   margin-top: 2em;
+  width: 40%;
 }
 
 .contact-section.segment .update.container h3 {
@@ -736,6 +737,7 @@ body {
 .contact-section.segment .update.container .input {
   position: relative;
   margin-top: 2em;
+
 }
 
 .contact-section.segment .update.container #thankyou_message h2 {
