added two logos

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -477,6 +477,12 @@
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://www.reactor.school/"><img class="ui image" src="/speakers_images/reactor.png"></a>
       </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/trive.png">
+      </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/tribe.png">
+      </div>
     </div>
   </div>
 
@@ -547,7 +553,7 @@
           <label><h3><b>Contact No(Singapore Only):</b></h3></label>
           <input type="number" name="phno" placeholder="Handphone Number" required="required">
           <br><br><br>
-          <label><h4>Note: we will be using your Contact No for communication purposes!</h4></label>
+          <label><h4>Note: we will be using your contact no for communication purposes!</h4></label>
         </div>
         <br>
         <button class="ui animated button" type="submit">
