added two links

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -478,10 +478,10 @@
         <a href="https://www.reactor.school/"><img class="ui image" src="/speakers_images/reactor.png"></a>
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/trive.png">
+        <a href="https://www.trive.vc/"><img class="ui image" src="/speakers_images/trive.png"></a>
       </div>
       <div class="eight wide mobile four wide tablet four wide computer column">
-        <img class="ui image" src="/speakers_images/tribe.png">
+        <a href="https://tribeaccelerator.co/"><img class="ui image" src="/speakers_images/tribe.png"></a>
       </div>
     </div>
   </div>
