--- a/views/main.ejs
+++ b/views/main.ejs
@@ -483,6 +483,9 @@
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://tribeaccelerator.co/"><img class="ui image" src="/speakers_images/tribe.png"></a>
       </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <img class="ui image" src="/speakers_images/innoway.png">
+      </div>
     </div>
   </div>
 
