--- a/views/main.ejs
+++ b/views/main.ejs
@@ -486,6 +486,9 @@
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://tribeaccelerator.co/"><img class="ui image" src="/speakers_images/tribe.png"></a>
       </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <a href="https://protege.vc/"><img class="ui image" src="/speakers_images/protege.jpg"></a>
+      </div>
     </div>
   </div>
 
