Addede Tie Logo

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -489,6 +489,9 @@
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://protege.vc/"><img class="ui image" src="/speakers_images/protege.jpg"></a>
       </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <a href="https://singapore.tie.org/"><img class="ui image" src="/speakers_images/tie.png"></a>
+      </div>
     </div>
   </div>
 
