--- a/views/main.ejs
+++ b/views/main.ejs
@@ -133,11 +133,11 @@
             </div>
             <div class="event">
               <h3 class="date">10:30 AM</h3>
-              <h3 class="title">FOUNDER’S STORY</h3>
+              <h3 class="title">UNICON’S STORY</h3>
             </div>
             <div class="event">
               <h3 class="date">11:00 AM</h3>
-              <h3 class="title">PASSION AND PRACTICALITY</h3>
+              <h3 class="title">ENTREPRENEURSHIP VS CORPORATE</h3>
             </div>
             <div class="event">
               <h3 class="date">12:00 PM</h3>
@@ -145,7 +145,7 @@
             </div>
             <div class="event">
               <h3 class="date">1:00 PM</h3>
-              <h3 class="title">MAKING SENSE OF BIG DATA IN THE DIGITAL AGE<br>TECHNOLOGIES OF THE FUTURE<br>SINGAPORE'S ROLE IN SEA START-UP SCENE <br>BLOCKCHAIN: CRYPTO & BEYOND</h3>
+              <h3 class="title">SOUTHEAST ASIA INTERNET ECONOMY<br>TECHNOLOGIES OF THE FUTURE, TODAY.<br>SINGAPORE AS A STARTUP LAUNCHPAD IN SEA<br>BLOCKCHAIN: CRYPTO & BEYOND<br>FOUNDER'S STORY</h3>
             </div>
             <div class="event">
               <h3 class="date">7:00PM</h3>
@@ -158,35 +158,35 @@
             <h2>DAY 2, FEBRUARY 24TH</h2>
             <div class="event">
               <h3 class="date">10:00 AM</h3>
-              <h3 class="title">SOUTHEAST ASIA INTERNET ECONOMY</h3>
+              <h3 class="title">MAKING SENSE OF BIG DATA IN THE DIGITAL AGE</h3>
             </div>
             <div class="event">
               <h3 class="date">10:30 AM</h3>
-              <h3 class="title">PURSUING BLUE OCEAN STRATEGY</h3>
+              <h3 class="title">BLUE OCEAN STRATEGY</h3>
             </div>
             <div class="event">
-              <h3 class="date">11:00 AM</h3>
-              <h3 class="title">FINTECH: BIGGEST FISH IN S.E.A</h3>
+              <h3 class="date">11:30 AM</h3>
+              <h3 class="title">FINANCIAL INCLUSIVENESS WITH FINTECH IN S.E.A</h3>
             </div>
             <div class="event">
               <h3 class="date">12:00 PM</h3>
               <h3 class="title">LUNCH</h3>
             </div>
             <div class="event">
-              <h3 class="date">1:00 PM</h3>
-              <h3 class="title">ALIBABA AND THE 163 CHINESE UNICORNS</h3>
+              <h3 class="date">2:00 PM</h3>
+              <h3 class="title">BLITZSCALING: BUILDING A UNICON</h3>
             </div>
             <div class="event">
-              <h3 class="date">2:00 PM</h3>
+              <h3 class="date">2:30 PM</h3>
               <h3 class="title">GROWTH HACKING IN THE REGION</h3>
             </div>
             <div class="event">
-              <h3 class="date">3:00 PM</h3>
+              <h3 class="date">3:30 PM</h3>
               <h3 class="title">UNICON ARENA</h3>
             </div>
             <div class="event">
               <h3 class="date">5:00 PM</h3>
-              <h3 class="title">NETWORKING TEA</h3>
+              <h3 class="title">END OF DAY 2</h3>
             </div>
           </div>
         </div>
@@ -194,7 +194,7 @@
     </div>
 
     <div class="ui text description container">
-      <a href="https://drive.google.com/file/d/15rB5hy39wZYZ2b9YOflSlPhTHstHgria/view?usp=sharing" class="ui animated button" id="full-agenda">
+      <a href="https://drive.google.com/file/d/1CgaPKl7cB_rwk-apI2Y-EnqiO22-mv4g/view?usp=sharing" class="ui animated button" id="full-agenda">
         <div class="visible content">View Full Agenda</div>
         <div class="hidden content"><i class="list icon"></i></div>
       </a>
@@ -559,10 +559,10 @@
           <input type="text" name="name" placeholder="Name" required="required">
         </div>
         <div class="field">
-          <label><h3><b>Contact No(Singapore Only):</b></h3></label>
+          <label><h3><b>Contact Number(Singapore Only):</b></h3></label>
           <input type="number" name="phno" placeholder="Handphone Number" required="required">
           <br><br><br>
-          <label><h4>Note: we will be using your contact no for communication purposes!</h4></label>
+          <label><h4>Note: we will be using your contact no for communication purposes (via WhatsApp)!</h4></label>
         </div>
         <br>
         <button class="ui animated button" type="submit">
