--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -372,7 +372,7 @@ body {
 .agenda-section.segment .content .column .card {
   position: relative;
   width: 100%;
-  height: 81%;
+  height: 93%;
   vertical-align: middle;
 }
 
@@ -956,6 +956,13 @@ body {
     /*color: rgb(48, 207, 208);*/
   }
 
+  .agenda-section.segment .content .column .card {
+    position: relative;
+    width: 100%;
+    height: 87%;
+    vertical-align: middle;
+  }
+
 }
 
 @media only screen and (max-width: 1500px) {
@@ -1041,7 +1048,7 @@ body {
   .agenda-section.segment .content .column .card {
     position: relative;
     width: 100%;
-    height: 87%;
+    height: 85%;
     vertical-align: middle;
   }
 
@@ -1101,6 +1108,13 @@ body {
 
   .arena-section.segment .arena.container #arena_application_form_section img{
     height: 1100px;
+  }
+
+  .agenda-section.segment .content .column .card {
+    position: relative;
+    width: 100%;
+    height: 97%;
+    vertical-align: middle;
   }
 }
 
