--- a/views/main.ejs
+++ b/views/main.ejs
@@ -133,7 +133,7 @@
             </div>
             <div class="event">
               <h3 class="date">10:30 AM</h3>
-              <h3 class="title">UNICON’S STORY</h3>
+              <h3 class="title">UNICORN’S STORY</h3>
             </div>
             <div class="event">
               <h3 class="date">11:00 AM</h3>
@@ -174,7 +174,7 @@
             </div>
             <div class="event">
               <h3 class="date">2:00 PM</h3>
-              <h3 class="title">BLITZSCALING: BUILDING A UNICON</h3>
+              <h3 class="title">BLITZSCALING: BUILDING A UNICORN</h3>
             </div>
             <div class="event">
               <h3 class="date">2:30 PM</h3>
