added two new speakers

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -301,6 +301,14 @@
           <h3 class="info"><div class="name" id="no_warp">Sarveen Chester</div><br>Growth Launcher<br>Revolut</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/sarveen_ chester.png">
         </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <h3 class="info"><div class="name" id="no_warp">Tj Tham</div><br>CEO<br>GrabWheels</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/tj_tham.png">
+        </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <h3 class="info"><div class="name" id="no_warp">ZP Lee</div><br>CEO & Founder<br>UpCode Academy</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/zp_lee.png">
+        </div>
       <!--Present Speakers-->
     </div>
 
